Added EF Core and Seeded Database

--- a/ThesisApp.API/appsettings.json
+++ b/ThesisApp.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ThesisAppDbConnectionString": "Server=(localdb)\\mssqllocaldb;Database=ThesisAppDb;Trusted_Connection=True;MultipleActiveResultSets=True"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
